--- a/맹주연/33dom.html
+++ b/맹주연/33dom.html
@@ -14,7 +14,7 @@
         <h2>슬라이드 섹션영역</h2>
         <div class="slide-wrap">
           <ul class="sliderUl">
-            <li class="sldier">
+            <li class="slider">
               <div>
                 <p>슬라이드 번호1</p>
                 <img
@@ -23,25 +23,25 @@
                 />
               </div>
             </li>
-            <li class="sldier">
+            <li class="slider">
               <div>
                 <p>슬라이드 번호2</p>
                 <img src="https://picsum.photos/400/600" alt="" />
               </div>
             </li>
-            <li class="sldier">
+            <li class="slider">
               <div>
                 <p>슬라이드 번호3</p>
                 <img src="https://picsum.photos/800/500" alt="" />
               </div>
             </li>
-            <li class="sldier">
+            <li class="slider">
               <div>
                 <p>슬라이드 번호4</p>
                 <img src="https://picsum.photos/300/600" alt="" />
               </div>
             </li>
-            <li class="sldier">
+            <li class="slider">
               <div>
                 <p>슬라이드 번호4</p>
                 <img src="https://picsum.photos/300/600" alt="" />
