--- a/맹주연/33dom.html
+++ b/맹주연/33dom.html
@@ -43,7 +43,7 @@
             </li>
             <li class="slider">
               <div>
-                <p>슬라이드 번호4</p>
+                <p>슬라이드 번호5</p>
                 <img src="https://picsum.photos/300/600" alt="" />
               </div>
             </li>
@@ -56,6 +56,7 @@
           <span class="dot2">2</span>
           <span class="dot3">3</span>
           <span class="dot4">4</span>
+          <span class="dot5">5</span>
         </div>
       </section>
     </main>
