[Feat] next, prev btn add

--- a/안준우/slide.html
+++ b/안준우/slide.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     <link rel="stylesheet" href="./slide.css" />
+    <script src="slide.js" defer></script>
   </head>
   <body>
     <main>
@@ -13,7 +14,7 @@
         <h2>슬라이드 섹션영역</h2>
         <div class="slide-wrap">
           <ul class="sliderUl">
-            <li class="sldier">
+            <li class="slider">
               <div>
                 <p>슬라이드 번호1</p>
                 <img
@@ -22,25 +23,19 @@
                 />
               </div>
             </li>
-            <li class="sldier">
+            <li class="slider">
               <div>
                 <p>슬라이드 번호2</p>
                 <img src="https://picsum.photos/400/600" alt="" />
               </div>
             </li>
-            <li class="sldier">
+            <li class="slider">
               <div>
                 <p>슬라이드 번호3</p>
                 <img src="https://picsum.photos/800/500" alt="" />
               </div>
             </li>
-            <li class="sldier">
-              <div>
-                <p>슬라이드 번호4</p>
-                <img src="https://picsum.photos/300/600" alt="" />
-              </div>
-            </li>
-            <li class="sldier">
+            <li class="slider">
               <div>
                 <p>슬라이드 번호4</p>
                 <img src="https://picsum.photos/300/600" alt="" />
