feat: Add dynamic dot pagination

--- a/김도연/index.html
+++ b/김도연/index.html
@@ -56,12 +56,7 @@
         <button class="btn next">
           <i class="fa-solid fa-chevron-right"></i>
         </button>
-        <div class="slider-dot">
-          <span class="dot1"></span>
-          <span class="dot2"></span>
-          <span class="dot3"></span>
-          <span class="dot4"></span>
-        </div>
+        <div class="slider-dot"></div>
       </section>
     </main>
   </body>
